python-click (6.7+git20180829-1) UNRELEASED; urgency=medium

  * New upstream snapshot.
  * Remove unneeded patches.
  * Depend on python3-pallets-sphinx-themes.
  * d/rules: no longer clean artwork/.

 -- Alexandre Viau <aviau@debian.org>  Thu, 06 Sep 2018 14:55:26 -0400

python-click (6.7-5) unstable; urgency=medium

  * Sphinx 1.7 support. (Closes: #896630)

 -- Alexandre Viau <aviau@debian.org>  Thu, 28 Jun 2018 20:37:56 -0400

python-click (6.7-4) unstable; urgency=medium

  * Correct homepage field (Closes: #895277).
  * Fix insecure-copyright-format-uri.

 -- Alexandre Viau <aviau@debian.org>  Fri, 13 Apr 2018 09:12:35 -0400

python-click (6.7-3.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Ship documentation subpackage (Closes: #844432).
  * Reduce short description length.
  * Declare compliance with Debian policy 4.1.3.

 -- Athos Ribeiro <athoscribeiro@gmail.com>  Fri, 23 Mar 2018 23:25:00 +0000

python-click (6.7-3) unstable; urgency=medium

  * Fix dead VCS-Git URL.

 -- Alexandre Viau <aviau@debian.org>  Sun, 07 Jan 2018 13:59:09 -0500

python-click (6.7-2) unstable; urgency=medium

  * Move to salsa.debian.org.

 -- Alexandre Viau <aviau@debian.org>  Fri, 29 Dec 2017 01:02:22 -0500

python-click (6.7-1) unstable; urgency=medium

  [ Ondřej Nový ]
  * Enabled autopkgtest-pkg-python testsuite
  * Standards-Version is 3.9.8 now (no changes needed)
  * d/watch: Use https protocol

  [ Alexandre Viau ]
  * New upstream version (Closes: #856581)
  * d/watch: exclude dev versions
  * Create skip_test_legacy_callbacks.patch (Closes: #868816)

 -- Alexandre Viau <aviau@debian.org>  Wed, 19 Jul 2017 14:22:51 -0400

python-click (6.6-1) unstable; urgency=medium

  [ Adrian Alves ]
  * New upstream release
  * upstream fixed debian patch fix-locale-check.patch

  [ Alexandre Viau ]
  * Changed version to 6.6
  * Changed Vcs-Browser and Vcs-Git to secure (https) urls
  * Bumped Standards-Version to 3.9.7
