@@ -12,12 +12,8 @@ export SOURCE = $(CURDIR)/debian/
 %:
 	dh $@ --with python2,python3,sphinxdoc --buildsystem=pybuild
 
-override_dh_auto_clean:
-	dh_auto_clean
-	$(MAKE) -C docs clean
-
-override_dh_auto_build: export http_proxy=127.0.0.1:9
-override_dh_auto_build: export https_proxy=127.0.0.1:9
-override_dh_auto_build:
-	dh_auto_build
-	$(MAKE) -C docs clean html
+override_dh_sphinxdoc:
+ifeq (,$(findstring nodocs, $(DEB_BUILD_OPTIONS)))
+	http_proxy='http://127.0.0.1:9/' PYTHONPATH=. sphinx-build -N -q -E -b html docs/ debian/python-click-doc/usr/share/doc/python-click-doc/html/
+	dh_sphinxdoc
+endif
