@@ -4,6 +4,7 @@ python-click (6.7+git20180829-1) UNRELEASED; urgency=medium
   * Remove unneeded patches.
   * Depend on python3-pallets-sphinx-themes.
   * d/rules: no longer clean artwork/.
+  * d/rules: override_dh_sphinxdoc.
 
  -- Alexandre Viau <aviau@debian.org>  Thu, 06 Sep 2018 14:55:26 -0400
 
